--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="general_style.css">
+    <link rel="stylesheet" href="./styles/general_style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <script defer src="./scripts/script.js"></script>
@@ -12,24 +13,65 @@
 </head>
 
 <body>
-    <h1>CASINO LEND</h1>
-    <div>
-        <button type="button" class="btn btn-primary">Primary</button>
-        <button type="button" class="btn btn-secondary">Secondary</button>
-        <button type="button" class="btn btn-success">Success</button>
-        <button type="button" class="btn btn-danger">Danger</button>
-        <button type="button" class="btn btn-warning">Warning</button>
-        <button type="button" class="btn btn-info">Info</button>
-        <button type="button" class="btn btn-light">Light</button>
-        <button type="button" class="btn btn-dark">Dark</button>
+
+    <header>
+
+    </header>
+    <div class="content">
+        <section class="content-head">
+
+            <div class="content__details">
+                <div class="content_details__upper_rigth">
+                    <img src="./assets/images/details_left.png" alt="">
+                </div>
+                <div class="content__details-title__left">
+                    <img src="./assets/images/svg/title_S.svg" alt="">
+                </div>
+                <div class="content__details-title__right">
+                    <img src="./assets/images/svg/title_S_first.svg" alt="">
+                    <img src="./assets/images/svg/title_P.svg" alt="">
+                    <img src="./assets/images/svg/title_I.svg" alt="">
+                    <img src="./assets/images/svg/title_N_red.svg" alt="">
+                </div>
+                <div class="content__details-title__lasted">
+                    <img src="./assets/images/svg/title_I_white.svg" alt="">
+                    <img src="./assets/images/svg/title_N_white.svg" alt="">
+                    <img src="./assets/images/svg/title_N_white.svg" alt="">
+                </div>
+                <div class="content__details__upper_left">
+                    <img src="./assets/images/details_right.png" alt="">
+                </div>
+        </section>
+        <section class="content-centr">
+            <center>CEnte</center>
+            <div class="wiev">
+
+                <img src="./assets/images/svg/leftSide.svg" alt="spin" height="500px" width="700px">
+                <img src="./assets/images/svg/rightSide.svg" alt="spin" height="500px" width="700px">
+            </div>
+        </section>
+        <section class="content-down">
+            <footer>
+                <nav>about us</nav>
+            </footer>
+        </section>
     </div>
 
 
-    <div class="wiev">
-        <h1>title</h1>
-        <img src="./assets/images/svg/leftSide.svg" alt="spin" height="500px" width="700px">
-        <img src="./assets/images/svg/rightSide.svg" alt="spin" height="500px" width="700px">
+
+
+
     </div>
+    </section>
+
+    <section>
+
+    </section>
+
+
+
+
+
 
 
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
