--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
             </div>
         </section>
         <section class="content-down">
-            <footer>
-                <nav>about us</nav>
-            </footer>
+            <div class="content-down__images">
+                <img src="./assets/images/kubik_down.png" alt="">
+                <img src="./assets/images/details_down_right.png" alt="">
+            </div>
         </section>
     </div>
 
@@ -62,27 +63,10 @@
 
 
     </div>
+
+
     </section>
 
-    <section>
-
-    </section>
-
-
-
-
-
-
-
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Launch demo modal
-    </button>
-    <button onclick="showModal()">SHOW</button>
-
-    <div>
-        SAY HI
-        <button onclick="sayHi()">PUSH ME </button>
-    </div>
 </body>
 
 
