--- a/index.html
+++ b/index.html
@@ -42,21 +42,64 @@
                     <img src="./assets/images/details_right.png" alt="">
                 </div>
         </section>
-        <section class="content-centr">
-            <center>CEnte</center>
-            <div class="wiev">
+        <section>
+            <div class="content__centr">
+                <div class="content__centr-left-side">
 
-                <img src="./assets/images/svg/leftSide.svg" alt="spin" height="500px" width="700px">
-                <img src="./assets/images/svg/rightSide.svg" alt="spin" height="500px" width="700px">
+                    <img src="./assets/images/svg/leftSide.svg" alt="spin">
+
+                </div>
+
+                <div class="content__centr">
+                    <div class="content__centr-centr__spin">
+                        <div class="image-container smallest">
+                            <img src="" alt="Smallest Image">
+
+
+                            <div class="image-container medium">
+                                <img src="./assets/images/central_bg.png" alt="Medium Image">
+                                <div class="image-container larger">
+                                    <img src="./assets/images/central_blick.png" alt="Larger Image">
+
+                                    <div class="image-container largest">
+                                        <img src="./assets/images/central_cirle.png" alt="Largest Image">
+
+                                        <div class="image-container smaller">
+                                            <img src="./assets/images/central_spin_cirle.png" alt="">
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content__centr-right-side">
+
+                    <img src="./assets/images/svg/rightSide.svg" alt="spin">
+
+                </div>
+
             </div>
+
+
+
         </section>
+
         <section class="content-down">
             <div class="content-down__images">
                 <img src="./assets/images/kubik_down.png" alt="">
                 <img src="./assets/images/details_down_right.png" alt="">
             </div>
         </section>
+
+
+
     </div>
+
 
 
 
