add title S inside cirle

--- a/index.html
+++ b/index.html
@@ -18,15 +18,21 @@
 
     </header>
     <div class="content">
-        <section class="content-head">
+        <section>
 
             <div class="content__details">
                 <div class="content_details__upper_rigth">
                     <img src="./assets/images/details_left.png" alt="">
                 </div>
-                <div class="content__details-title__left">
-                    <img src="./assets/images/svg/title_S.svg" alt="">
+
+
+                <div class="content__details-title__circle">
+                    <img src="./assets/images/svg/circle.svg" alt="">
+                    <div class="content__details-title__circle-letter">
+                        <img src="./assets/images/svg/title_S.svg" alt="">
+                    </div>
                 </div>
+
                 <div class="content__details-title__right">
                     <img src="./assets/images/svg/title_S_first.svg" alt="">
                     <img src="./assets/images/svg/title_P.svg" alt="">
@@ -38,6 +44,8 @@
                     <img src="./assets/images/svg/title_N_white.svg" alt="">
                     <img src="./assets/images/svg/title_N_white.svg" alt="">
                 </div>
+
+
                 <div class="content__details__upper_left">
                     <img src="./assets/images/details_right.png" alt="">
                 </div>
