--- a/index.html
+++ b/index.html
@@ -26,25 +26,31 @@
                 </div>
 
 
-                <div class="content__details-title__circle">
-                    <img src="./assets/images/svg/circle.svg" alt="">
-                    <div class="content__details-title__circle-letter">
-                        <img src="./assets/images/svg/title_S.svg" alt="">
+                <div class="content__details_center-block">
+
+
+                    <div class="content__details-title__circle">
+                        <img src="./assets/images/svg/circle.svg" alt="">
+                        <div class="content__details-title__circle-letter">
+                            <img src="./assets/images/svg/title_S.svg" alt="">
+                        </div>
                     </div>
-                </div>
 
-                <div class="content__details-title__right">
-                    <img src="./assets/images/svg/title_S_first.svg" alt="">
-                    <img src="./assets/images/svg/title_P.svg" alt="">
-                    <img src="./assets/images/svg/title_I.svg" alt="">
-                    <img src="./assets/images/svg/title_N_red.svg" alt="">
-                </div>
-                <div class="content__details-title__lasted">
-                    <img src="./assets/images/svg/title_I_white.svg" alt="">
-                    <img src="./assets/images/svg/title_N_white.svg" alt="">
-                    <img src="./assets/images/svg/title_N_white.svg" alt="">
-                </div>
+                    <div class="content__details_title-centr">
+                        <div class="content__details_title-centr_red-title">
+                            <img src="./assets/images/svg/title_S_first.svg" alt="" style="margin-top: 10px">
+                            <img src="./assets/images/svg/title_P.svg" alt="" style="margin-top: 30px;">
+                            <img src="./assets/images/svg/title_I.svg" alt="" style="margin-top: 20px">
+                            <img src="./assets/images/svg/title_N_red.svg" alt="" style="margin-top: 20px">
+                        </div>
+                        <div class="content__details_title-centr_white-title">
+                            <img src="./assets/images/svg/title_I_white.svg" alt="" style="margin-top: 17px">
+                            <img src="./assets/images/svg/title_N_white.svg" alt="" style="margin-top: 30px">
+                            <img src="./assets/images/svg/title_N_white.svg" alt="" style="margin-top: 30px">
+                        </div>
+                    </div>
 
+                </div>
 
                 <div class="content__details__upper_left">
                     <img src="./assets/images/details_right.png" alt="">
