--- a/index.html
+++ b/index.html
@@ -19,16 +19,12 @@
     </header>
     <div class="content">
         <section>
-
             <div class="content__details">
                 <div class="content_details__upper_rigth">
                     <img src="./assets/images/details_left.png" alt="">
                 </div>
 
-
                 <div class="content__details_center-block">
-
-
                     <div class="content__details-title__circle">
                         <img src="./assets/images/svg/circle.svg" alt="">
                         <div class="content__details-title__circle-letter">
@@ -49,58 +45,50 @@
                             <img src="./assets/images/svg/title_N_white.svg" alt="" style="margin-top: 30px">
                         </div>
                     </div>
-
                 </div>
 
                 <div class="content__details__upper_left">
                     <img src="./assets/images/details_right.png" alt="">
                 </div>
+            </div>
         </section>
+
         <section>
             <div class="content__centr">
                 <div class="content__centr-left-side">
-
                     <img src="./assets/images/svg/leftSide.svg" alt="spin">
-
                 </div>
 
-                <div class="content__centr">
-                    <div class="content__centr-centr__spin">
-                        <div class="image-container smallest">
-                            <img src="" alt="Smallest Image">
+                <div class="content__centr-centr__spin">
+                    <div class="image-container smallest">
 
+                        <div class="image-container medium">
+                            <img src="./assets/images/central_bg.png" alt="Medium Image">
+                            <div class="image-container larger">
+                                <img src="./assets/images/central_blick.png" alt="Larger Image">
+                                <div class="image-container largest">
+                                    <div class="image-container arrow">
+                                        <img src="./assets/images/arrow.png" alt="Smallest Image">
+                                    </div>
 
-                            <div class="image-container medium">
-                                <img src="./assets/images/central_bg.png" alt="Medium Image">
-                                <div class="image-container larger">
-                                    <img src="./assets/images/central_blick.png" alt="Larger Image">
-
-                                    <div class="image-container largest">
-                                        <img src="./assets/images/central_cirle.png" alt="Largest Image">
-
-                                        <div class="image-container smaller">
-                                            <img src="./assets/images/central_spin_cirle.png" alt="">
-                                        </div>
-
+                                    <img src="./assets/images/central_cirle.png" alt="Largest Image">
+                                    <div class="image-container smaller">
+                                        <img src="./assets/images/central_spin_cirle.png" alt="">
                                     </div>
                                 </div>
-
                             </div>
-
                         </div>
                     </div>
                 </div>
 
                 <div class="content__centr-right-side">
-
                     <img src="./assets/images/svg/rightSide.svg" alt="spin">
-
                 </div>
-
             </div>
-
-
-
+            <button class="content__centr-btn">
+                <img src="./assets/images/spiner_in_btn.png" alt="">
+                SPIN
+            </button>
         </section>
 
         <section class="content-down">
@@ -109,10 +97,8 @@
                 <img src="./assets/images/details_down_right.png" alt="">
             </div>
         </section>
-
-
-
     </div>
+
 
 
 
