--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                         <img src="./assets/images/arrow.png" alt="Smallest Image">
                                     </div>
 
-                                    <img src="./assets/images/central_cirle.png" alt="Largest Image">
+                                    <img src="./assets/images/central_cirle.png" alt="Largest Image" id="rotatingImage">
                                     <div class="image-container smaller">
                                         <img src="./assets/images/central_spin_cirle.png" alt="">
                                     </div>
@@ -85,7 +85,7 @@
                     <img src="./assets/images/svg/rightSide.svg" alt="spin">
                 </div>
             </div>
-            <button class="content__centr-btn">
+            <button class="content__centr-btn" onclick="writeCircle()">
                 <img src="./assets/images/spiner_in_btn.png" alt="">
                 SPIN
             </button>
