--- a/index.html
+++ b/index.html
@@ -8,15 +8,33 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <script defer src="./scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
     <title>Document</title>
 </head>
 
 <body>
 
-    <header>
+    <script>
+        let counterShowModal = 0;
 
-    </header>
+        switch (counterShowModal) {
+            case 1: showModal();
+                break;
+            case 2: checked();
+                break;
+        }
+
+    </script>
+
+    <!-- <header>
+        <button onclick="showModal2()" class="btn btn-primary" type="button">SHOW MODAL</button>
+
+
+        <div>
+            <img src="./assets/images/bonuses/bonus-general.png" alt="bonus">
+        </div>
+
+    </header> -->
     <div class="content">
         <section>
             <div class="content__details">
@@ -89,6 +107,7 @@
                 <img src="./assets/images/spiner_in_btn.png" alt="">
                 SPIN
             </button>
+
         </section>
 
         <section class="content-down">
@@ -97,6 +116,7 @@
                 <img src="./assets/images/details_down_right.png" alt="">
             </div>
         </section>
+
     </div>
 
 
@@ -109,6 +129,8 @@
 
 
     </section>
+
+
 
 </body>
 
