add logick show modal

--- a/index.html
+++ b/index.html
@@ -15,26 +15,23 @@
 <body>
 
     <script>
-        let counterShowModal = 0;
 
-        switch (counterShowModal) {
-            case 1: showModal();
-                break;
-            case 2: checked();
-                break;
-        }
+        // function checkedValueSpin(spinCount){
+        //     let counterShowModal = 0;
+        //     switch (spinCount) {
+        //     case 1: showModal();
+        //         break;
+        //     case 2: showModal();
+        //         break;
+        //     default: alert("this is imposible")
+        // }
+        // }
+
+
+
 
     </script>
 
-    <!-- <header>
-        <button onclick="showModal2()" class="btn btn-primary" type="button">SHOW MODAL</button>
-
-
-        <div>
-            <img src="./assets/images/bonuses/bonus-general.png" alt="bonus">
-        </div>
-
-    </header> -->
     <div class="content">
         <section>
             <div class="content__details">
@@ -119,18 +116,9 @@
 
     </div>
 
-
-
-
-
-
-
     </div>
 
-
     </section>
-
-
 
 </body>
 
