--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
 
     <div>
-
         <button id="showModalBtn" class="btn btn-primary" style="opacity: 0;">Show Modal</button>
         <div id="modalContainer" class="modalContainer-show"></div>
         <script>
@@ -76,7 +75,13 @@
         <section>
             <div class="content__centr">
                 <div class="content__centr-left-side">
-                    <img src="./assets/images/svg/leftSide.svg" alt="spin">
+                    <img src="./assets/images/svg/rightSide.svg" alt="spin">
+                    <pre>
+                        Doğrulanmış hesaplara,
+                        para yatırmadan
+                        BEDAVA OYUN
+                    </pre>
+
                 </div>
 
                 <div class="content__centr-centr__spin">
@@ -102,7 +107,12 @@
                 </div>
 
                 <div class="content__centr-right-side">
-                    <img src="./assets/images/svg/rightSide.svg" alt="spin">
+                    <img src="./assets/images/svg/leftSide.svg" alt="spin">
+                    <pre>
+                        Özel promosyonlar,
+                            Doğum günü
+                            hediyeleri
+                    </pre>
                 </div>
             </div>
             <button class="content__centr-btn" onclick="writeCircle()">
@@ -124,6 +134,7 @@
     </div>
 
     </section>
+
 
 </body>
 
