--- a/index.html
+++ b/index.html
@@ -115,10 +115,13 @@
                     </pre>
                 </div>
             </div>
-            <button class="content__centr-btn" onclick="writeCircle()">
-                <img src="./assets/images/spiner_in_btn.png" alt="">
-                SPIN
-            </button>
+            <div class="content__centr-wrapper">
+                <button class="content__centr-btn" onclick="writeCircle()">
+                    <img src="./assets/images/spiner_in_btn.png" alt="">
+                    SPIN
+                </button>
+            </div>
+
 
         </section>
 
