--- a/modal.html
+++ b/modal.html
@@ -15,7 +15,8 @@
 
 <body>
 
-    <div class="modal fade" id="signInModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="signInModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+        style="background-color: white;">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">KAYDOLUN</div>
